--- a/README
+++ b/README
@@ -1,5 +1,23 @@
 Grassembler - graph-based assembly of short read sequences.
 
+Copyright 2012 - Humberto Ortiz-Zuazaga, Cassandra Schaening, Jose
+Carlos Bonilla, Alejandro Vientos del Valle, Richard Garcia Lebron.
+
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+Introduction 
+
 As a class project, build an eulerian assembler.
 
 Input will be 5000 reads of length 100 bases from a random 50 Kb chunk
